--- a/inventories/group_vars/maw_prod.yml
+++ b/inventories/group_vars/maw_prod.yml
@@ -13,11 +13,8 @@ git_root: "{{ controller_home_dir }}/git"
 asset_dir_root: /srv/www/website_assets
 
 # maw
-maw__username: svc_www_maw
-maw__password: "{{ vault_os_svc_www_maw }}"
 maw__env: prod
 maw__aspnet_env: production
-maw__allow_low_ports: true
 
 maw__fqdn_naked: mikeandwan.us
 maw__fqdn_api: api.mikeandwan.us
@@ -78,6 +75,11 @@ maw_host__asset_dirs:
   - "{{ maw__asset_dir_movies }}"
 maw_host__allow_low_ports: true
 maw_host__deploy_admin_scripts: true
+maw_host__allow_firewall_services:
+  - http
+  - https
+maw_host__username: svc_www_maw
+maw_host__password: "{{ vault_os_svc_www_maw }}"
 
 # shared google creds volume
 maw_google_creds__backup_dir: "{{ controller_maw_env_root }}/google-creds"
