--- a/roles/mikeandwan_us/tasks/main.yml
+++ b/roles/mikeandwan_us/tasks/main.yml
@@ -4,18 +4,18 @@
     file: maw_certs.yml
     apply:
       become: true
-      become_user: "{{ maw__username }}"
+      become_user: "{{ maw_host__username }}"
 
 - name: Obtain self signed certificate passwords
   ansible.builtin.include_tasks:
     file: maw_certs_get_pwds.yml
     apply:
       become: true
-      become_user: "{{ maw__username }}"
+      become_user: "{{ maw_host__username }}"
 
 - name: Include maw_pod.yml
   ansible.builtin.include_tasks:
     file: maw_pod.yml
     apply:
       become: true
-      become_user: "{{ maw__username }}"
+      become_user: "{{ maw_host__username }}"
