--- a/test_playbook_maw.yml
+++ b/test_playbook_maw.yml
@@ -1,4 +1,27 @@
 ---
+- name: gather current backups
+  hosts: current_prod
+  vars_files:
+    - "{{ controller_secrets_file }}"
+
+  tasks:
+    - name: test running postgres backups
+      ansible.builtin.include_role:
+        name: maw_prod_backup
+        apply:
+          delegate_to: tifa
+      vars:
+        ansible_user: svc_www_maw
+        maw_prod_backup__hostname: tifa
+        maw_prod_backup__username: svc_www_maw
+        maw_prod_backup__use_existing_backups: false
+        maw_prod_backup__postgres_pod: maw-pod
+        maw_prod_backup__postgres_image: docker.io/postgres:13-alpine
+        maw_prod_backup__postgres_container: "dev-ansible-postgres-backup"
+        maw_prod_backup__postgres_envfile: /home/svc_www_maw/maw-postgres-backup.env
+        maw_prod_backup__control_dir_postgres: "/home/mmorano/ansible/db_backup_test"
+        maw_prod_backup__temp_remote_dir_postgres: /home/svc_www_maw/_tmp_ansible_postgres_backup
+
 - name: Configure mikeandwan.us prod environment
   hosts: maw_prod
   gather_facts: false
@@ -183,20 +206,6 @@
     #       - "{{ ansible_user }}"
     #       - svc_ddclient
 
-    - name: test running postgres backups
-      ansible.builtin.include_role:
-        name: maw_prod_backup
-        apply:
-          delegate_to: tifa
-      vars:
-        ansible_user: svc_www_maw
-        maw_prod_backup__hostname: tifa
-        maw_prod_backup__username: svc_www_maw
-        maw_prod_backup__use_existing_backups: false
-        maw_prod_backup__postgres_pod: maw-pod
-        maw_prod_backup__postgres_image: docker.io/postgres:13-alpine
-        maw_prod_backup__postgres_container: "dev-ansible-postgres-backup"
-        maw_prod_backup__postgres_envfile: /home/svc_www_maw/maw-postgres-backup.env
-        maw_prod_backup__control_dir_postgres: "/home/mmorano/ansible/db_backup_test"
-        maw_prod_backup__temp_remote_dir_postgres: /home/svc_www_maw/_tmp_ansible_postgres_backup
-
+    - name: debug
+      ansible.builtin.debug:
+        msg: here
