--- a/roles/maw_prod_postgres_backup/meta/argument_specs.yml
+++ b/roles/maw_prod_postgres_backup/meta/argument_specs.yml
@@ -3,47 +3,47 @@ argument_specs:
   main:
     short_description: This role is responsible from getting backups from production and saving them to the control server
     options:
-      maw_prod_backup__hostname:
+      maw_prod_pg_bu__hostname:
         type: str
         required: true
         description: Name of the existing server where the production databases are located
 
-      maw_prod_backup__username:
+      maw_prod_pg_bu__username:
         type: str
         required: true
         description: Name of the user that hosts the postgres containers / services
 
-      maw_prod_backup__use_existing_backups:
+      maw_prod_pg_bu__use_existing_backups:
         type: bool
         required: true
         description: Specifies if this process should be skipped if backups already exist on the control node
 
-      maw_prod_backup__postgres_pod:
+      maw_prod_pg_bu__pod:
         type: str
         required: true
         description: Name of the pod running the production postgres container
 
-      maw_prod_backup__postgres_image:
+      maw_prod_pg_bu__image:
         type: str
         required: true
         description: Name of the postgres image to use to dump roles and databases
 
-      maw_prod_backup__postgres_container:
+      maw_prod_pg_bu__container:
         type: str
         required: true
         description: Name of the temp postgres container that will dump roles and databases
 
-      maw_prod_backup__postgres_envfile:
+      maw_prod_pg_bu__envfile:
         type: str
         required: true
         description: Absolute path to the current production postgres envfile
 
-      maw_prod_backup__control_dir_postgres:
+      maw_prod_pg_bu__control_dir:
         type: str
         required: true
         description: Absolute path to the postgres backup directory on the controller
 
-      maw_prod_backup__temp_remote_dir_postgres:
+      maw_prod_pg_bu__temp_remote_dir:
         type: str
         required: true
         description: Absolute pat to the temp postgres backup directory on the production server
