--- a/test_playbook_maw.yml
+++ b/test_playbook_maw.yml
@@ -7,20 +7,18 @@
   tasks:
     - name: test running postgres backups
       ansible.builtin.include_role:
-        name: maw_prod_backup
-        apply:
-          delegate_to: tifa
+        name: maw_prod_postgres_backup
       vars:
         ansible_user: svc_www_maw
-        maw_prod_backup__hostname: tifa
-        maw_prod_backup__username: svc_www_maw
-        maw_prod_backup__use_existing_backups: false
-        maw_prod_backup__postgres_pod: maw-pod
-        maw_prod_backup__postgres_image: docker.io/postgres:13-alpine
-        maw_prod_backup__postgres_container: "dev-ansible-postgres-backup"
-        maw_prod_backup__postgres_envfile: /home/svc_www_maw/maw-postgres-backup.env
-        maw_prod_backup__control_dir_postgres: "/home/mmorano/ansible/db_backup_test"
-        maw_prod_backup__temp_remote_dir_postgres: /home/svc_www_maw/_tmp_ansible_postgres_backup
+        maw_prod_pg_bu__hostname: tifa
+        maw_prod_pg_bu__username: svc_www_maw
+        maw_prod_pg_bu__use_existing_backups: true
+        maw_prod_pg_bu__pod: maw-pod
+        maw_prod_pg_bu__image: docker.io/postgres:13-alpine
+        maw_prod_pg_bu__container: "dev-ansible-postgres-backup"
+        maw_prod_pg_bu__envfile: /home/svc_www_maw/maw-postgres-backup.env
+        maw_prod_pg_bu__control_dir: "/home/mmorano/ansible/db_backup_test"
+        maw_prod_pg_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_postgres_backup
 
 - name: Configure mikeandwan.us prod environment
   hosts: maw_prod
