--- a/test_playbook_maw.yml
+++ b/test_playbook_maw.yml
@@ -32,17 +32,29 @@
     #     maw_prod_gdrive_creds_bu__control_dir: "/home/mmorano/ansible/gdrive_backup_test"
     #     maw_prod_gdrive_creds_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_gdrive_backup
 
-    - name: test running google creds backups
+    # - name: test running google creds backups
+    #   ansible.builtin.include_role:
+    #     name: maw_prod_google_creds_backup
+    #   vars:
+    #     ansible_user: svc_www_maw
+    #     maw_prod_google_creds_bu__hostname: tifa
+    #     maw_prod_google_creds_bu__username: svc_www_maw
+    #     maw_prod_google_creds_bu__use_existing_backups: true
+    #     maw_prod_google_creds_bu__volume: "maw-google-creds"
+    #     maw_prod_google_creds_bu__control_dir: "/home/mmorano/ansible/google_backup_test"
+    #     maw_prod_google_creds_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_google_backup
+
+    - name: test running uploads backup
       ansible.builtin.include_role:
-        name: maw_prod_google_creds_backup
+        name: maw_prod_uploads_backup
       vars:
         ansible_user: svc_www_maw
-        maw_prod_google_creds_bu__hostname: tifa
-        maw_prod_google_creds_bu__username: svc_www_maw
-        maw_prod_google_creds_bu__use_existing_backups: true
-        maw_prod_google_creds_bu__volume: "maw-google-creds"
-        maw_prod_google_creds_bu__control_dir: "/home/mmorano/ansible/google_backup_test"
-        maw_prod_google_creds_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_google_backup
+        maw_prod_uploads_bu__hostname: tifa
+        maw_prod_uploads_bu__username: svc_www_maw
+        maw_prod_uploads_bu__use_existing_backups: true
+        maw_prod_uploads_bu__volume: maw-uploads
+        maw_prod_uploads_bu__control_dir: "/home/mmorano/ansible/upload_backup_test"
+        maw_prod_uploads_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_upload_backup
 
 - name: Configure mikeandwan.us prod environment
   hosts: maw_prod
