--- a/test_playbook_maw.yml
+++ b/test_playbook_maw.yml
@@ -44,17 +44,17 @@
     #     maw_prod_google_creds_bu__control_dir: "/home/mmorano/ansible/google_backup_test"
     #     maw_prod_google_creds_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_google_backup
 
-    - name: test running uploads backup
-      ansible.builtin.include_role:
-        name: maw_prod_uploads_backup
-      vars:
-        ansible_user: svc_www_maw
-        maw_prod_uploads_bu__hostname: tifa
-        maw_prod_uploads_bu__username: svc_www_maw
-        maw_prod_uploads_bu__use_existing_backups: true
-        maw_prod_uploads_bu__volume: maw-uploads
-        maw_prod_uploads_bu__control_dir: "/home/mmorano/ansible/upload_backup_test"
-        maw_prod_uploads_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_upload_backup
+    # - name: test running uploads backup
+    #   ansible.builtin.include_role:
+    #     name: maw_prod_uploads_backup
+    #   vars:
+    #     ansible_user: svc_www_maw
+    #     maw_prod_uploads_bu__hostname: tifa
+    #     maw_prod_uploads_bu__username: svc_www_maw
+    #     maw_prod_uploads_bu__use_existing_backups: true
+    #     maw_prod_uploads_bu__volume: maw-uploads
+    #     maw_prod_uploads_bu__control_dir: "/home/mmorano/ansible/upload_backup_test"
+    #     maw_prod_uploads_bu__temp_remote_dir: /home/svc_www_maw/_tmp_ansible_upload_backup
 
 - name: Configure mikeandwan.us prod environment
   hosts: maw_prod
